--- a/src/styles.css
+++ b/src/styles.css
@@ -46,13 +46,17 @@ main {
   padding: 30px 0;
 }
 
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
 .current-temperature {
   font-size: 48px;
 }
 
 .current-weather {
   display: flex;
-  justify-content: space-between;
 }
 
 .current-city {
